Fix name for Authentication and Authorization group

--- a/sites/handbook/source/handbook/engineering/development/dev/manage/authentication-and-authorization/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/authentication-and-authorization/index.html.md.erb
@@ -145,7 +145,7 @@ We have [cross-functional prioritization](/handbook/product/product-processes/#c
 
 #### Monthly cross-functional dashboard review
 
-We create a monthly issue that is assigned to all counterparts. The issue has to be created manually by an Engineering Manager, but we have an issue template in the [Authentication & Authorization discussion repo](https://gitlab.com/gitlab-org/manage/authentication-and-authorization/discussion).
+We create a monthly issue that is assigned to all counterparts. The issue has to be created manually by an Engineering Manager, but we have an issue template in the [Authentication and Authorization discussion repo](https://gitlab.com/gitlab-org/manage/authentication-and-authorization/discussion).
 
 You can read more about this process on the [handbook page](/handbook/cross-functional-prioritization).
 
