--- a/sites/handbook/source/handbook/engineering/development/dev/manage/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/manage/index.html.md.erb
@@ -229,7 +229,7 @@ All meetings should have an agenda prepared at least 12 hours in advance. If thi
 
 <%= partial("handbook/engineering/development/dev/manage/shared_links.erb") %>
 * Our handbook pages
-  * [Authentication & Authorization](/handbook/engineering/development/dev/manage/authentication-and-authorization/)
+  * [Authentication and Authorization](/handbook/engineering/development/dev/manage/authentication-and-authorization/)
   * [Compliance](/handbook/engineering/development/dev/manage/compliance/)
   * [Import](/handbook/engineering/development/dev/manage/import/)
   * [Optimize](/handbook/engineering/development/dev/manage/optimize/)
