--- a/sites/handbook/source/handbook/engineering/quality/quality-engineering/dev-qe-team/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/quality-engineering/dev-qe-team/index.html.md.erb
@@ -19,7 +19,7 @@ description: "Quality Engineering team for the Dev Section"
 | **Issue Tracker** | [quality/team-tasks](https://gitlab.com/gitlab-org/quality/team-tasks/issues/) |
 
 Engineers in this Sub-Department are embedded in the [Dev section]
-## Current OKR 
+## Current OKR
 
 <iframe src="https://app.ally.io/public/ToDXbCI5WIIIGoa" class="dashboard-embed" height="900" width="100%" style="border:none;"> </iframe>
 
@@ -32,7 +32,7 @@ Quality Engineering Manager: Ramya Authappan
 | 1    	| Create    	| [Source Code]            	| Anastasia McDonald                                                    |
 | 2    	| Create    	| [Code Review]            	| Jay McCure                                                           	|
 | 3    	| Create    	| [Editor]                 	| Jason Zhang                                                   	    |
-| 4    	| Manage    	| [Authentication & Authorization]                 	| Sanad Liaquat                                                        	|
+| 4    	| Manage    	| [Authentication and Authorization]                 	| Sanad Liaquat                                                        	|
 | 5    	| Manage    	| [Workspace]              	| Valerie Burton                                                        |
 | 6    	| Manage    	| [Import]                 	| Andrejs Cunskis                                                      	|
 | 7    	| Manage    	| [Optimize]               	| TBH                                                                  	|
@@ -58,8 +58,8 @@ Please find below the relevant projects/epics/issue boards used by various produ
 |----------|----------------------|---------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | 1        | [Source Code]        |  Anastasia McDonald             | [Planning Issue](https://gitlab.com/gitlab-org/create-stage/-/issues/?search=Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Asource%20code&first_page_size=20)                                                       |
 | 2        | [Code Review]        | Jay McCure                      | [Planning Issue](https://gitlab.com/gitlab-org/create-stage/-/issues/?search=Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Acode%20review&first_page_size=20)                                                       |
-| 3        | [Editor]             | Jason Zhang                     |      [Planning Issue](https://gitlab.com/gitlab-com/create-stage/editor/-/issues/?sort=created_asc&state=all&label_name%5B%5D=Planning%20Issue&first_page_size=20) |                                                                                                                                     
-| 4        | [Authentication & Authorization]        | Sanad Liaquat                   | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aauthentication%20and%20authorization&first_page_size=20) |
+| 3        | [Editor]             | Jason Zhang                     |      [Planning Issue](https://gitlab.com/gitlab-com/create-stage/editor/-/issues/?sort=created_asc&state=all&label_name%5B%5D=Planning%20Issue&first_page_size=20) |
+| 4        | [Authentication and Authorization]        | Sanad Liaquat                   | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aauthentication%20and%20authorization&first_page_size=20) |
 | 5        | [Workspace]          | Valerie Burton                  | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aworkspace&first_page_size=20)                            |
 | 6        | [Import]             | Andrejs Cunskis |[Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aimport&first_page_size=20)              |
 | 7        | [Optimize]           | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aoptimize&first_page_size=20)                             |
@@ -70,7 +70,7 @@ Please find below the relevant projects/epics/issue boards used by various produ
 | 12       | [Foundations]        | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/ecosystem-stage/team-tasks/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Afoundations&first_page_size=20)                         |
 
 [Dev section]: /handbook/product/categories/#dev-section
-[Authentication & Authorization]: /handbook/product/categories/#authentication--authorization-group
+[Authentication and Authorization]: /handbook/product/categories/#authentication-and-authorization-group
 [Workspace]: /handbook/product/categories/#workspace-group
 [Import]: /handbook/product/categories/#import-group
 [Optimize]: /handbook/product/categories/#optimize-group
