--- a/source/direction/manage/templates/_next.erb
+++ b/source/direction/manage/templates/_next.erb
@@ -1,6 +1,6 @@
 ## What's Next
 
-### Authentication & Authorization
+### Authentication and Authorization
 
 <%= partial("direction/manage/auth/templates/next") %>
 
