--- a/source/direction/manage/auth/index.html.md.erb
+++ b/source/direction/manage/auth/index.html.md.erb
@@ -11,7 +11,7 @@ canonical_path: "/direction/manage/auth/"
 | Category | **Authorization and Authentication** |
 | --- | --- |
 | Stage | [Manage](https://about.gitlab.com/handbook/product/categories/#manage-stage) |
-| Group | [Authentication & Authorization](https://about.gitlab.com/handbook/product/categories/#authentication--authorization-group) |
+| Group | [Authentication and Authorization](https://about.gitlab.com/handbook/product/categories/#authentication-and-authorization-group) |
 | Maturity | [Complete](/direction/maturity/) |
 | Content Last Reviewed | `2022-09-14` |
 
@@ -49,10 +49,10 @@ We are also acutely aware of the increasing security needs in Authentication and
 
 ### Near-Term Goals
 
-1. Continue progress on  [Customizable Roles and Permissions](https://gitlab.com/groups/gitlab-org/-/epics/4035). We have worked through the majority of our MVC for testing [technical performance](https://gitlab.com/groups/gitlab-org/-/epics/8408) with custom roles and are going to use the next milestone to [evaluate](https://gitlab.com/gitlab-org/gitlab/-/issues/370089) the final outcome. 
+1. Continue progress on  [Customizable Roles and Permissions](https://gitlab.com/groups/gitlab-org/-/epics/4035). We have worked through the majority of our MVC for testing [technical performance](https://gitlab.com/groups/gitlab-org/-/epics/8408) with custom roles and are going to use the next milestone to [evaluate](https://gitlab.com/gitlab-org/gitlab/-/issues/370089) the final outcome.
 
 
-2. Our MVC for [Domain Verification](https://gitlab.com/gitlab-org/gitlab/-/issues/353030) is completed as of %15.4, and unlocks a lot of features in the [Enterprise Users](https://gitlab.com/groups/gitlab-org/-/epics/5299) Epic. We now allow any provisioned user that matches a verified domain to [bypass e-mail verificaion](https://gitlab.com/gitlab-org/gitlab/-/issues/238461) for any e-mail address belonging to the domain, which is something that our customers have been requesting due to the onboarding friction it causes. 
+2. Our MVC for [Domain Verification](https://gitlab.com/gitlab-org/gitlab/-/issues/353030) is completed as of %15.4, and unlocks a lot of features in the [Enterprise Users](https://gitlab.com/groups/gitlab-org/-/epics/5299) Epic. We now allow any provisioned user that matches a verified domain to [bypass e-mail verificaion](https://gitlab.com/gitlab-org/gitlab/-/issues/238461) for any e-mail address belonging to the domain, which is something that our customers have been requesting due to the onboarding friction it causes.
 
 Next up for Enterprise Users will be the [claims process](https://gitlab.com/gitlab-org/gitlab/-/issues/322039) for existing users who match a verified domain who were not provisioned. This will allow a group owner to claim users who match their domains.
 
