--- a/source/direction/manage/template.html.md.erb
+++ b/source/direction/manage/template.html.md.erb
@@ -11,7 +11,7 @@ canonical_path: "/direction/manage/"
 - TOC
 {:toc}
 
-## Overview 
+## Overview
 
 <p align="center">
     <font size="+2">
@@ -31,7 +31,7 @@ canonical_path: "/direction/manage/"
 
 <%= partial("direction/manage/templates/groups") %>
 
-### Authentication & Authorization
+### Authentication and Authorization
 
 <%= partial("direction/manage/auth/templates/overview") %>
 
