Add support information

--- a/sites/handbook/source/handbook/engineering/development/sec/secure/dynamic-analysis/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/secure/dynamic-analysis/index.html.md.erb
@@ -166,6 +166,10 @@ Community contributions should get prompt feedback from one of the DAST engineer
 
 For our Merge Request types, we have an initial soft target ratio of 60% features, 30% maintenance, and 10% bugs based on the [cross-functional prioritization process](https://about.gitlab.com/handbook/product/product-processes/#cross-functional-prioritization).  This is not a hard target and we expect to see variation in this ratio as we mature and our focus evolves.
 
+### Support Requests
+
+The Dynamic Analysis engineering team provides support to GitLab Support Engineers [following the process outlined in the Sec Section support project](https://gitlab.com/gitlab-com/sec-sub-department/section-sec-request-for-help/). 
+
 ### OKRs
 
 [Explore the DAST OKRs](https://app.ally.io/users/159480/objectives?time_period_id=135092&viewId=218529)
