--- a/sites/uncategorized/source/blog/blog-posts/2022-09-21-amazon-linux-2-service-ready-partner.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-09-21-amazon-linux-2-service-ready-partner.html.md.erb
@@ -17,6 +17,8 @@ GitLab’s hard working Enablement Engineering team has taken this commitment to
 
 The AWS Service Ready program requires that GitLab provide specific evidence in regard to support, compatibility testing and security testing in order to deploy GitLab on Amazon Linux 2 with confidence.
 
+Here is GitLab’s [Amazon Linux 2 Service Ready Partner listing](https://aws.amazon.com/amazon-linux-2/partners/?partner-solutions-cards.sort-by=item.additionalFields.partnerNameLower&partner-solutions-cards.sort-order=asc&awsf.partner-solutions-filter-partner-type=*all&partner-solutions-cards.q=GitLab&partner-solutions-cards.q_operator=AND).
+
 ## Amazon Linux 2 support in GitLab 15.0
 
 Amazon Linux 2 is supported in GitLab 15.0 and later. An [earlier blog](/blog/2022/05/02/amazon-linux-2-support-and-distro-specific-packages/) discusses a variety of important points and provides some code in order to plan a smooth transition.
