--- a/sites/handbook/source/handbook/support/index.html.md.erb
+++ b/sites/handbook/source/handbook/support/index.html.md.erb
@@ -225,9 +225,7 @@ for tips on how to keep yourself informed about engineering announcements and in
 Here are our most important modes of communication:
 
 - [Support Week in Review](#support-week-in-review). Important updates for everyone in support.
-You should try to check the SWIR at least once a week. If you have something to share with the
-entire team this is the best place to do it. For example, if you have an issue for a common bug, an issue that requires feedback,
-or an issue about an external project you're working.
+The SWIR is expected reading/listening for all support team members. You should try to check the SWIR at least once a week. If you have something to share with the entire team this is the best place to do it. For example, if you have an issue for a common bug, an issue that requires feedback, or an issue about an external project you're working.
 - [Slack channels](#slack) for ["informal"](/handbook/communication/#slack) communication.
 Due to our data retention policy in Slack, things shared there will eventually be deleted. If you want to share something there, please make sure it also has a more permanent place in our docs, handbook, issue tracker, etc.
 - [Meta issue tracker](https://gitlab.com/gitlab-com/support/support-team-meta/issues/) for any issues regarding workflows,
@@ -449,19 +447,26 @@ You may wish to host a sync call. To do so, you can create an event on the [Supp
 
 ### Support Week in Review
 
-Every Friday, we do a week in review, inspired by the [greater Engineering organization week in review](https://drive.google.com/drive/u/0/search?q=type:document%20title%20%22Engineering%20week-in-review%22).  You can add topics any time to the [support week in review google document](https://drive.google.com/drive/u/0/search?q=%22Support%20Week%20in%20Review%22%20-archive%20-Senior%20parent:1eBkN9gosfqNVSoRR9LkS2MHzVGjM5-t5).
+Every Friday, we do a week in review, inspired by the [greater Engineering organization week in review](https://drive.google.com/drive/u/0/search?q=type:document%20title%20%22Engineering%20week-in-review%22).  You can add topics any time by using the SWIR [topic form](https://gitlab-com.gitlab.io/support/toolbox/forms_processor/SWIR/).
 
-Any workflow changes or announcements should be shared in the SWIR and we recommend you check at least once a week to stay up to date on recent changes.
-Ideally, the information shared here should have a permanent location such as an issue or merge request.
+Any workflow changes or announcements should be shared in the SWIR and we recommend you check at least once a week to stay up to date on recent changes. Ideally, the information shared here should have a permanent location such as an issue or merge request.
+
+#### How to read/listen to the SWIR
+- You can read the Support Week in Review by viewing the [more recent issue](https://gitlab.com/gitlab-com/support/readiness/support-week-in-review/-/issues/?sort=created_date&state=all&label_name%5B%5D=SWIR%3A%3ADigest&first_page_size=20) with the `SWIR::Digest` label in the [SWIR project](https://gitlab.com/gitlab-com/support/readiness/support-week-in-review). 
+- You can subscribe to this label to be notified when the latest SWIR has been generated.  
+- You can also find a link to the audio edition of the SWIR within the issue.
 
 We encourage anyone in the team to share. We currently have the following topics:
 
 - **Actionable**. For items that require a decision to be made or action to be taken (such as, asking for feedback on an issue).
-- **Kudos**. Give a special kudos to other team members or highlight something they did.
 - **Things to know about**. Share items that you would like to share with the team, like projects you're working on, known bugs, new workflows, cool articles you found, etc.
+- **Team Member updates**. New team members, internal transfers and nother news about our team members!
+- **What Did we Learn this Week**. A space to share things you've discovered (or rediscovered!) and learnt.
+- **Support Operations Corner**. Announcements and information from the Support Operations team
+- **Kudos**. Give a special kudos to other team members or highlight something they did.
+   -**SSAT**. A selection of the positive SSAT feedback received from customers during the week
 - **Metrics report**. Review the support metrics for the span of the week.
-- **Music/TV/Movie Sharing**. Share and recommend a song, a show, or a movie with the team.
-- **Personal Updates / Weekend Plans / Random**. Share awesome pics from recent trips, what you're up to on the weekend, or something else.
+
 
 You can read about how we got this started
 [in this issue](https://gitlab.com/gitlab-com/support/support-team-meta/issues/1394).
