Add link to email templates

--- a/sites/handbook/source/handbook/marketing/community-relations/community-programs/index.html.md.erb
+++ b/sites/handbook/source/handbook/marketing/community-relations/community-programs/index.html.md.erb
@@ -56,7 +56,7 @@ Beginning in FY22 and continuing through FY23, the Community Programs team is ad
 
 ### Inbound sales requests routing workflows
 
-Sales team members receiving inbound requests regarding community programs, should adhere to the following workflow and rout leads accordingly:
+Sales team members receiving inbound requests regarding community programs, should adhere to the following workflow and route leads accordingly, using [Community Programs' email templates](handbook/marketing/community-relations/community-programs/community-program-applications/email-and-zendesk-macros/#zendesk-macros-and-email-templates) if desired:
 
 | If the lead is inquiring about | Then take this action|
 | ------------------------------ | --------------------- |
