Update dri schedule references in index.html.md.erb

--- a/sites/handbook/source/handbook/engineering/quality/quality-engineering/oncall-rotation/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/quality-engineering/oncall-rotation/index.html.md.erb
@@ -48,19 +48,9 @@ and for [specific instructions on how to do an appropriate level of investigatio
 
 ### Schedule
 
-July 2022 - October 2022
+To view the pipeline triage rotation schedule, please visit the [pipeline-triage](https://gitlab.com/gitlab-org/quality/pipeline-triage#dri-weekly-rotation-schedule) project. 
 
-| **Start Date** | **APAC [DRI]**     | **EMEA [DRI]**   | **AMER [DRI]**    |
-|----------------|--------------------|------------------|-------------------|
-| 2022-09-05     | Mark Lapierre      | Sofia Vistas     | Désirée Chevalier |
-| 2022-09-12     | Harsha Muralidhar  | Andrejs Cunskis  | Dan Davison       |
-| 2022-09-19     | Sanad Liaquat      | Grant Young      | Valerie Burton    |
-| 2022-09-26     | Anastasia McDonald | Edgars Brālītis  | Zeff Morgan       |
-| 2022-10-03     | Careem Ahamed      | Alex Lyubenkov   | Chloe Liu         |
-| 2022-10-10     | Carlo Catimbang    | Will Meek        | Tiffany Rea       |
-| 2022-10-17     | Erick Banks (AMER) | Nailia Iskhakova | Sean Gregory      |
-| 2022-10-24     | John McDonnell     | Sofia Vistas     | Jason Zhang       |
-| 2022-10-31     | Jay McCure         | Nick Westbury    | Richard Chong     |
+Or use `chatops` in Slack with command `/chatops run quality dri schedule`
 
 ### Responsibilities of the DRI for scheduled pipelines
 
