Delete Emergency Page

--- a/sites/handbook/source/handbook/engineering/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/index.html.md.erb
@@ -142,7 +142,7 @@ There are seven departments within the Engineering Division:
 - [Wider Community Merge Request Triage Policies](/handbook/engineering/quality/merge-request-triage/)
 - [Root Cause Analysis](/handbook/engineering/root-cause-analysis/)
 - [Critical Security Releases](https://gitlab.com/gitlab-org/release/docs/blob/master/general/security/process.md#critical-security-releases)
-- [Emergency Meeting Protocol](/handbook/engineering/emergency-meeting-protocol/)
+- [Incident Management](/handbook/engineering/infrastructure/incident-management/)
 
 ### GitLab in Production
 
