Add Lorena and Jon to TW pages

--- a/sites/handbook/source/handbook/product/ux/technical-writing/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/ux/technical-writing/index.html.md.erb
@@ -186,7 +186,9 @@ For collaboration in other projects and subjects:
 [Diana Logan]: https://gitlab.com/dianalogan
 [Evan Read]: https://gitlab.com/eread
 [Fiona Neill]: https://gitlab.com/fneill
+[Jon Glassman]: https://gitlab.com/jglassman1
 [Kati Paizee]: https://gitlab.com/kpaizee
+[Lorena Ciutacu]: https://gitlab.com/lciutacu
 [Lyn Landon]: https://gitlab.com/llandon
 [Marcel Amirault]: https://gitlab.com/marcel.amirault
 [Marcin Sędłak-Jakubowski]: https://gitlab.com/msedlakjakubowski
