--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -214,6 +214,8 @@
 [Clayton Cornell]: https://gitlab.com/claytoncornell
 [Phillip Wells]: /company/team/#phillipwells
 [Ashraf Khamis]: /company/team/#ashrafkhamis
+[Lorena Ciutacu]: /company/team/#lciutacu
+[Jon Glassman]: /company/team/#jglassman1
 
 [Darby Frey]: /company/team/#darbyfrey
 [John Hampton]: /company/team/#johnrhampton
