--- a/sites/handbook/source/includes/stages/tech-writing.html.haml
+++ b/sites/handbook/source/includes/stages/tech-writing.html.haml
@@ -85,6 +85,14 @@
                     %td
                       %a{:href => "https://gitlab.com/ashrafkhamis"}
                         = docsteam
+                  - when "Lorena Ciutacu"
+                    %td
+                      %a{:href => "https://gitlab.com/lciutacu"}
+                        = docsteam
+                  - when "Jon Glassman"
+                    %td
+                      %a{:href => "https://gitlab.com/jglassman1"}
+                        = docsteam
                   - when "#docs Slack channel"
                     %td
                       %a{:href => "https://gitlab.slack.com/archives/C16HYA2P5"}
