Add developer portal SEG

--- a/sites/handbook/source/handbook/engineering/incubation/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/incubation/index.html.md.erb
@@ -90,18 +90,19 @@ The Incubation Engineering Department is not suited to deliver regular roadmap i
   </div>
 </div>
 
-## Open Vacancies
+## Future Interest
 
 <div class="flex-row" markdown="0">
   <div>
     <a href="/handbook/engineering/incubation/attack-breach-simulation/" class="btn btn-purple" style="width:30%;margin:5px;">Breach and Attack Simulation (BAS)</a>
     <a href="https://about.gitlab.com/direction/package/#dependency-firewall" class="btn btn-purple" style="width:30%;margin:5px;">Dependency Firewall</a>
-    <a href="/handbook/engineering/incubation/devops-for-salesforce/" class="btn btn-purple" style="width:30%;margin:5px;">DevOps for Salesforce</a>
+    <a href="/handbook/engineering/incubation/developer-portal/" class="btn btn-purple" style="width:30%;margin:5px;">Developer Portal</a>
   </div>
 </div>
 
 <div class="flex-row" markdown="0">
   <div>
+  <a href="/handbook/engineering/incubation/devops-for-salesforce/" class="btn btn-purple" style="width:30%;margin:5px;">DevOps for Salesforce</a>
   <a href="/handbook/engineering/incubation/istio/" class="btn btn-purple" style="width:30%;margin:5px;">Istio</a>
   <a href="/handbook/engineering/incubation/vault-secrets-rotation/" class="btn btn-purple" style="width:30%;margin:5px;">Vault Secrets Rotation</a>
   </div>
