--- a/sites/uncategorized/source/blog/blog-posts/2022-09-29-using-gitlab-pages-lets-encrypt.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-09-29-using-gitlab-pages-lets-encrypt.html.md.erb
@@ -4,6 +4,7 @@ author: Bryan Behrenshausen, Fatima Sarah Khalid
 author_gitlab: Bryan Behrenshausen, Fatima Sarah Khalid
 author_twitter: sugaroverflow
 categories: security
+image_title: '/images/blogimages/contain-security.jpg'
 tags: open source, security, community
 description: Learn how to add a Let's Encrypt TLS
   certificate to a website hosted and managed via GitLab Pages.
