--- a/sites/uncategorized/source/blog/blog-posts/2022-09-29-using-gitlab-pages-lets-encrypt.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-09-29-using-gitlab-pages-lets-encrypt.html.md.erb
@@ -1,7 +1,7 @@
 ---
 title: GitLab and Let's Encrypt partner to improve website security
 author: Bryan Behrenshausen, Fatima Sarah Khalid
-author_gitlab: Bryan Behrenshausen, Fatima Sarah Khalid
+author_gitlab:
 author_twitter: sugaroverflow
 categories: security
 image_title: '/images/blogimages/contain-security.jpg'
