--- a/sites/uncategorized/source/blog/blog-posts/2022-09-29-using-gitlab-pages-lets-encrypt.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-09-29-using-gitlab-pages-lets-encrypt.html.md.erb
@@ -24,7 +24,7 @@ It's an important protocol because internet connections aren't necessarily secur
 
 That's where TLS comes in.
 
-## How does TLS/SSL work?
+## How does TLS work?
 
 TLS consists of several components, one of which is [a digital certificate](https://www.digicert.com/what-is-an-ssl-certificate), the goal of which is to secure data flowing to and from a website and help users trust in the integrity and confidentiality of that data.
 
