Remove redundant word

--- a/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-insights/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-insights/index.html.md.erb
@@ -11,10 +11,10 @@ description: "The GitLab Verify:Pipeline Insights Group Handbook page"
 {:toc .hidden-md .hidden-lg}
 
 ## Vision
-We provide confidence in software through by increasing visibility into code change impacts on software in GitLab.
+We provide confidence in software by increasing visibility into code change impacts on software in GitLab.
 
 ## Mission
-The Verify:Pipeline Insights Group provides visibility into the results of code changes on software applications. We aim to  easily integrate layers testing and verification into their GitLab CI workflow including:
+The Verify:Pipeline Insights Group provides visibility into the results of code changes on software applications. We aim to easily integrate layers testing and verification into their GitLab CI workflow including:
 
 * [Code Testing & Coverage](/direction/verify/code_testing/)
 * [Performance Testing](/direction/verify/performance_testing/)
