Add a link to the full documentation about workflows

--- a/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-execution/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-execution/index.html.md.erb
@@ -206,6 +206,8 @@ At any point, if an issue becomes blocked, it would be in the `workflow::blocked
  
 `Closed` means that all code changes associated with the issue are fully enabled on gitlab.com. If it is being rolled out behind a feature flag, it means the feature flag is enabled for all users on gitlab.com.
 
+More detail on the workflow is available on the [Product-Development Flow](https://about.gitlab.com/handbook/product-development-flow/) page.
+
 ### "What do I work on next?"
 
 #### What are the priorities for this milestone?
