Update metrics on data team page

--- a/sites/handbook/source/handbook/business-technology/data-team/index.html.md.erb
+++ b/sites/handbook/source/handbook/business-technology/data-team/index.html.md.erb
@@ -140,9 +140,21 @@ DMAU Measures the direct usage of the Data Platform by GitLab Team Members based
      - Quarterly Data Monthly Active Users (Q-DMAU) = Unique Sisense Users + Unique Snowflake Users + Unique Tableau Users across all months in a quarter OR sum(months in quarter)/
      - Note: Users of Sisense, Tableau and Snowflake might be double counted if they access multiple systems. We do not count distinct users across the tools.
 
-#### Dollar Value of our Results as calculated by the Data Value Calculator
+#### Revenue/Efficiency gains from Data Products 
 
-We can use the [Data Team Value Calculator](https://about.gitlab.com/handbook/business-technology/data-team/how-we-work/#data-team-value-calculator) to calculate the dollar value of the initiatives we contribute to and the issues we complete.
+First we have the evaluation criteria known as Dollar Value of our Results as calculated by the Data Value Calculator. We can use the [Data Team Value Calculator](https://about.gitlab.com/handbook/business-technology/data-team/how-we-work/#data-team-value-calculator) to calculate the dollar value of the initiatives we contribute to and the issues we complete.
+Additionally we want to shift to a more aspirational measurement which is to measure the ARR impact or efficiency gain from each of our data products.
+
+#### % of Top cross functional & LRO Projects with Measurement plans 
+In order to measure this we need to have 
+1. all product features logged for analysis in a centrally governed way
+1. Iteration and experimentation to drive business value
+1. Strong visibility into key business results, business processes, product behavior and programs
+1. Data Governance across business systems, product, and warehouse so we all speak the same language
+
+#### % Analytics Time on Level 1 / 2 work
+
+We measure this based on time of team members spent on [Level 1 and Level 2 work](https://about.gitlab.com/handbook/finance/#types-of-work-that-the-team-does)
 
 #### Customer Satisfaction Scores (CSAT)
 
