Govern and Growth are stages

--- a/sites/handbook/source/handbook/engineering/development/growth/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/growth/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 layout: handbook-page-toc
-title: Growth Sub-department
-description: "The Growth Sub-department consists of development teams working in the product delivering enhancements and running experiments"
+title: Growth Stage
+description: "The Growth Stage consists of development teams working in the product delivering enhancements and running experiments"
 ---
 
 ## On this page
@@ -16,7 +16,7 @@ Deliver enhancements through feature development and experiments that allow us t
 
 ## Mission
 
-The Growth sub-department consists of groups that eliminate barriers between our users and our product value.
+The Growth stage consists of groups that eliminate barriers between our users and our product value.
 
 * [Acquisition](acquisition/)
 * [Activation](activation/)
@@ -31,8 +31,8 @@ Teams focus on validating ideas with data and provide development input into two
 We work on the issues prioritized by our product teams including running [experiments](/handbook/engineering/development/growth/experimentation/) on GitLab.com.
 More information on priorities can be found on the [Growth direction](/direction/growth/) page.
 
-Growth sub-department teams have Fullstack Engineers.
-The reason for this is that the Growth sub-department has a need for both Frontend and Backend skill-sets,
+Growth stage teams have Fullstack Engineers.
+The reason for this is that the Growth stage has a need for both Frontend and Backend skill-sets,
 but as a small team, has optimized for team member efficiency to adopt the Fullstack role.
 
 Some useful links to see how and what we are working on include:
@@ -51,7 +51,7 @@ Some useful links to see how and what we are working on include:
 
 ### All Team Members
 
-The following people are permanent members of groups that belong to the Growth sub-department:
+The following people are permanent members of groups that belong to the Growth stage:
 
 #### Acquisition
 <%= department_team(base_department: "Acquisition Team") %>
@@ -61,7 +61,7 @@ The following people are permanent members of groups that belong to the Growth s
 
 ### Business Continuity - Coverage and Escalation
 
-The following table shows who will provide cover if one or more of the Growth Sub-department management team are unable to work for any reason.
+The following table shows who will provide cover if one or more of the Growth Stage management team are unable to work for any reason.
 
 | Team Member        | Covered by            | Escalation            |
 | -----              | -----                 | -----                 |
@@ -107,7 +107,7 @@ We adhere to the **Completion Criteria** and **Who Transitions Out** outlined in
 
 We use workflow boards to track issue progress throughout a milestone. Workflow boards should be viewed at the highest group level for visibility into all nested projects in a group.
 
-The Growth sub-department uses the `~"devops::growth"` label and the following groups for tracking merge request rate and ownership of issues and merge requests.
+The Growth stage uses the `~"devops::growth"` label and the following groups for tracking merge request rate and ownership of issues and merge requests.
 
 | Name          | Label                   | gitlab-org | all groups |
 | ----------    | -----------             | ------     | ------     |
@@ -198,12 +198,12 @@ The Growth groups regularly run experiments to test product hypothesis.
 - View the [developer documentation](https://docs.gitlab.com/ee/development/experiment_guide/)
 - View slides for the [Experimentation Workshop](https://docs.google.com/presentation/d/1nmStWChWkYad9K-dced9wS4jS7XLIrHB-WKafc7jrMU/)
 
-GitLab team members are welcome to attend the [Growth Sub-department Engineering Weekly](#growth-engineering-weekly) meetings
+GitLab team members are welcome to attend the [Growth Stage Engineering Weekly](#growth-engineering-weekly) meetings
 to connect with growth team members and find out more about running experiments at GitLab.
 
 ### Growth metrics
 
-The Growth sub-department tracks number of experiments deployed as a development metric. This is not an individual or team performance indicator. This allows teams to track their technical debt.
+The Growth stage tracks number of experiments deployed as a development metric. This is not an individual or team performance indicator. This allows teams to track their technical debt.
 
 New experiments added to the codebase using [experiment feature flags](https://docs.gitlab.com/ee/development/feature_flags/#experiment-type) are tracked until removal.
 Current experiments shows the total number of experiments in the codebase (pending, active, or concluded and ready to be removed).
@@ -235,7 +235,7 @@ On occasion we hold virtual team days or meetings to take a break and participat
 ## Common Links
 
 * [How to create a Sisense SQL alert](/handbook/engineering/development/growth/sisense_alert.html)
-* [Growth sub-department]
+* [Growth stage]
 * [Growth workflow board]
 * `#s_growth` in [Slack](https://gitlab.slack.com/archives/s_growth) (GitLab internal)
 * [Growth technical debt status](https://app.periscopedata.com/app/gitlab/618368/Growth-technical-debt-status) (GitLab internal)
@@ -246,7 +246,7 @@ On occasion we hold virtual team days or meetings to take a break and participat
 [Experiment idea]: https://gitlab.com/gitlab-org/gitlab/-/issues/new?issuable_template=Experiment%20Idea
 
 [GitLab values]: /handbook/values/
-[Growth sub-department]: /handbook/engineering/development/growth/
+[Growth stage]: /handbook/engineering/development/growth/
 [Growth workflow board]: https://gitlab.com/groups/gitlab-org/-/boards/1158847
 [Growth opportunities]: https://gitlab.com/gitlab-org/growth/product/-/issues
 [Growth meetings and agendas]: https://drive.google.com/drive/search?q=type:document%20title:%22Growth%20Weekly%22
