--- a/sites/handbook/source/handbook/engineering/development/growth/acquisition/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/growth/acquisition/index.html.md.erb
@@ -12,7 +12,7 @@ description: "The Growth:Acquisition group works on feature enhancements and gro
 
 ## Vision
 
-The Acquisition Group is part of the [Growth Sub-department]. We work on [connecting our users with our product value](/direction/growth/).
+The Acquisition Group is part of the [Growth Stage]. We work on [connecting our users with our product value](/direction/growth/).
 
 * I have a question. Who do I ask?
 
@@ -73,11 +73,11 @@ for work in the build phase of the product development flow.
 
 ## Common Links
 
-* [Growth Sub-department]
+* [Growth Stage]
 * [Acquisition issues]
 * `#g_acquisition` in [Slack](https://gitlab.slack.com/archives/g_acquisition) (GitLab internal)
 
-[Growth sub-department]: /handbook/engineering/development/growth/
+[Growth stage]: /handbook/engineering/development/growth/
 [Acquisition issues]: https://gitlab.com/gitlab-org/growth/product/-/issues?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Aacquisition
 
 
