--- a/sites/handbook/source/handbook/engineering/development/growth/activation/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/growth/activation/index.html.md.erb
@@ -12,7 +12,7 @@ description: "The Growth:Activation group works on feature enhancements and grow
 
 ## Vision
 
-The Activation Group is part of the [Growth Sub-department]. We work on [connecting our users with our product value](/direction/growth/).
+The Activation Group is part of the [Growth Stage]. We work on [connecting our users with our product value](/direction/growth/).
 
 * I have a question. Who do I ask?
 
@@ -69,11 +69,11 @@ merge requests across multiple projects.
 ## Common Links
 
 
-* [Growth Sub-department]
+* [Growth Stage]
 * [Activation issues]
 * `#g_activation` in [Slack](https://gitlab.slack.com/archives/g_activation) (GitLab internal)
 
-[Growth sub-department]: /handbook/engineering/development/growth/
+[Growth stage]: /handbook/engineering/development/growth/
 [Activation issues]: https://gitlab.com/gitlab-org/growth/product/-/issues?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=group%3A%3Aactivation
 
 
