add the word phone

--- a/sites/handbook/source/handbook/engineering/development/processes/Infra-Dev-Escalation/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/processes/Infra-Dev-Escalation/index.html.md.erb
@@ -154,6 +154,6 @@ Mute all other channels but the escalation channel during a specific time period
 
 **A:** It’s actually both and we are working to address both.  We have also added a Infra/Dev issue board to track concerns to see through to resolution and make sure we have the right priority and severity on them.  It’s likely that oncall escalations will end up with follow on items for [this board](https://gitlab.com/groups/gitlab-org/-/boards/1193197?scope=all&utf8=%E2%9C%93&state=opened&label_name[]=gitlab.com&label_name[]=infradev). [This page](/handbook/engineering/development/#continuous-delivery-and-infrastructure-collaboration) gives the description.
 
-**Q: How should the infrastructure member make international calls to page engineers?**
+**Q: How should the infrastructure member make international phone calls to page engineers?**
 
-**A:** Zoom supports [international calling with low rates](https://zoom.us/zoomconference/rates). This can be done from inside an ongoing Zoom call under `Invite > Phone`. Considering that this will only be used for a quick call, to alert the engineer of an ongiong escalation, the cost for GitLab will be very minimal.
+**A:** Zoom supports making international calls [with low rates](https://zoom.us/zoomconference/rates). This can be done from inside an ongoing Zoom call under `Invite > Phone`. Considering that this will only be used for a quick phone call, to alert the engineer of an ongiong escalation, the cost for GitLab will be very minimal. 
